# LotoIA

./: .env.example  .gitignore  .render-buildpacks  AGENTS.md  ARCHITECTURAL_AUDIT_RECONCILIATION_V2.md  ARCHITECTURAL_RECONCILIATION_REPORT_V2.md  ARCHITECTURE_OVERVIEW.md  CHANGELOG.md  CLAUDE.md  CLOUD_RUNTIME.md  CONTRIBUTING.md  DASHBOARD_STRUCTURE.md  INGESTION_FINAL_CONSOLIDATION_REPORT.md  ML_GOVERNANCE.md  NAMESPACE_RECONCILIATION_REPORT.md  OPERATIONAL_MONITORING.md  Procfile  README.md  README_INSTITUCIONAL.md  RELATORIO_ULTIMO.json  RELEASE_NOTES.md  STANDARDIZATION_GUIDE.md  SYSTEM_FLOW.md  TECHNICAL_REVIEW_REPORT.md  lotoia.db  lotoia.py  lotoia_runtime.py  nixpacks.toml  pyproject.toml  railway.api.toml  railway.backup.toml  railway.toml  render.yaml  requirements.txt  test_cobertura_moderna.py  test_coverage_modern.py  test_postgresql_connection.py  teste_streamlit.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
ADRs/: ADR-001-ARCHITECTURAL-FREEZE.md  ADR-021-INSTITUTIONAL-OBSERVABILITY-LAYER.md  ADR-022-OPERATIONAL-MEMORY-ENGINE.md  ADR-023-SCIENTIFIC-ML-GOVERNANCE.md  ADR-028-INSTITUTIONAL-MAINTENANCE.md  ADR-029-TEMPORAL-SCIENTIFIC-GOVERNANCE-AND-HISTORY-SEGREGATION.md  ADR-030-TEMPORAL-CONSOLIDATION-BENCHMARK-FEATURE-GEOMETRY-RUNTIME-INTEGRITY.md  ADR-031-CONSOLIDACAO-OPERACIONAL-CIENTIFICA.md  ADR-032-OPERATIONAL-SCIENTIFIC-AUDIT-BASELINE.md  ADR-033-INSTITUTIONALIZATION-OF-SCIENTIFIC-VALIDATION.md  ADR-034-EXPANSION-LIFECYCLE-RETENTION-POLICY.md  ADR-035-CYCLE-CLOSURE-HYBRID-OPERATIONAL-MATURATION.md  (+18 more)
(+1268 files in other folders)
