[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lotoia"
version = "0.1.0"
description = "Sistema de analises estatisticas para LOTOFACIL."
requires-python = ">=3.11"
dependencies = [
    "SQLAlchemy>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
lotoia-analysis = "lotoia.cli:run_basic_analysis_cli"
lotoia-backtest = "lotoia.cli:run_backtest_cli"
lotoia-benchmark = "lotoia.cli:run_benchmark_cli"
lotoia-dashboard = "lotoia.cli:run_dashboard_cli"
lotoia-init-db = "lotoia.cli:init_database_cli"
lotoia-reports = "lotoia.cli:run_reports_cli"
lotoia-show-runs = "lotoia.cli:show_runs_cli"
lotoia-weight-calibration = "lotoia.cli:run_weight_calibration_cli"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
